# MarketMate

./: README.md
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py
backend/infrastructure/: .terraform.lock.hcl  compute.tf  database.tf  ecr.tf  load_balancer.tf  main.tf  networking.tf  outputs.tf  security_groups.tf  storage.tf  terraform.tfvars.example  variables.tf
backend/infrastructure/bootstrap/: main.tf
backend/infrastructure/bootstrap-db/: main.tf
backend/infrastructure/bootstrap-db/lambda_task/: build.sh  handler.py
docs/: aws_sso.md  deployment.md  docker.md
infrastructure/: main.tf  s3.tf
