[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic==1.13.2",
    "annotated-types==0.7.0",
    "astroid==3.2.4",
    "blinker==1.8.2",
    "boto3==1.34.158",
    "botocore==1.34.158",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "dill==0.3.8",
    "dnspython==2.6.1",
    "flask==3.0.3",
    "flask-cors==4.0.1",
    "flask-jwt-extended==4.6.0",
    "flask-migrate==4.0.7",
    "flask-pymongo==2.3.0",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.0.3",
    "gunicorn==22.0.0",
    "idna==3.7",
    "isort==5.13.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "jmespath==1.0.1",
    "mako==1.3.5",
    "markupsafe==2.1.5",
    "mccabe==0.7.0",
    "packaging==24.1",
    "pkce==1.0.3",
    "platformdirs==4.2.2",
    "psycopg2-binary==2.9.9",
    "pydantic==2.8.2",
    "pydantic-core==2.20.1",
    "pyjwt==2.8.0",
    "pylint==3.2.6",
    "pymongo==4.8.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "s3transfer==0.10.2",
    "six==1.16.0",
    "sqlalchemy==2.0.34",
    "tomlkit==0.13.0",
    "typing-extensions==4.12.2",
    "urllib3==1.26.16",
    "werkzeug==3.0.3",
]
